HEAD:
    - proyvind: don't pick up python version from python egg, rely on path
	only in stead to avoid incorrect version dependencies if any other
	egg metadata for other versions is found.
    - proyvind: rpmjs: port to SpiderMonkey 1.8.5 API for real.
    - afb: mongo: rename --json to --mongo
    - afb: yaml: make the mapping unordered
    - afb: sqlite: fix database schema used
    - afb: json: don't include "dbinstance"
    - afb: yaml: fix changelog entry markup
    - afb: hdrfmt.c: add ISO-8601 date format
    - afb: yaml: use !!timestamp for timestamps

5.4.0 -> 5.4.1:
    - devzero2000: In fpLookupSubdir, data returned by hash should be of type
      "struct rpmffi_s **" instead of "struct rpmffi_s *" to avoid
      segfault. Patch by Qing He.
    - devzero2000: the elfutils --reloc-debug-sections is useful
      mostly for LKM and not in general. Better to enable
      when needed/useful and not systemwide.
    - devzero2000: elfutils-0.153 introduce the --reloc-debug-sections
      This is a new option to eu-strip that strips
      out/resolves relocations between .debug_* elf sections in ET_REL files.
      This can save a lot of space for kernel module, but also for generic shared libs
      for example.
      Use this option with find-debuginfo if supported by the target platform.
      Check also for the eu_strip path and AC_SUBST it if found
      (ref http://lists.rpm.org/pipermail/rpm-maint/2011-May/003041.html).
      @rpm.org has introduced the same change but for they not automatically enabled it 
      if supported by the current elfutils version.
    - devzero2000: added gcc-c++ in devtool.conf for fedora (required by beecrypt)
    - devzero2000: added fedora per platform macro from redhat-rpm-config
    - devzero2000: added suse to the per vendor change configure.ac enabler
    - devzero2000: added suse.in macros file from rpm-4.9.0-122
      (http://tinyurl.com/3vo287b)
    - devzero2000: resurrect openwall (owl) vendor detection